--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
-
+    <body style= "background: #00b3e6";>
     <div>
-      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+      <div style="width: 700px; margin: auto; font-family: Helvetica Neue; background: white; padding: 30px";>
+      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?
+        <h1 id style="font-size: 22px";>
+      </h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
@@ -23,6 +26,7 @@
       <p>As a contrast, let's consider the type of questions we might ask ourselves as we write HTML:</p>
 
       <ul>
+        <ul style="font-style: italic;">
         <li class='perspective-questions'>Does the order of items within a list matter? Should it be a numbered list?</li>
         <li class='perspective-questions'>Should we wrap a list of links inside a navigation tag?</li>
         <li class='perspective-questions'>Is this the most important header in the whole HTML document?</li>
